# ai-agent-example

./: .gitignore  README.md  pyproject.toml
huggingface_course/: langchain_firstagent.py  llamaindex_docs.py  llamaindex_human.py  llamaindex_simple.py  llamaindex_tool.py  llamaindex_workflow.py  llamaindex_workflow_2.py  smolagent_codeagents.py  smolagent_multiagent.py  smolagent_rag.py  smolagent_rag_vectorsearch.py  smolagent_toolagents.py
huggingface_course/data/: fakeuser.csv
huggingface_course/test/: __init__.py  test_calculator.py  test_latency.py
